--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "gh-pages": "^1.2.0",
+    "merge": "^1.2.1",
     "react": "^16.5.0",
+    "react-dev-utils": "^7.0.1",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "predeploy": "npm run build",
