--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "gh-pages": "^1.2.0",
     "merge": "^1.2.1",
-    "react": "^16.5.0",
-    "react-dev-utils": "^7.0.1",
-    "react-dom": "^16.5.0",
+    "npm-check-updates": "^3.1.12",
+    "react": "^16.8.6",
+    "react-dev-utils": "^7.0.5",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.4.0",
-    "webpack-dev-server": "^3.1.14"
+    "reactstrap": "^6.5.0",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "predeploy": "npm run build",
