--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.1.1",
     "merge": "^1.2.1",
-    "npm-check-updates": "^3.1.12",
-    "react": "^16.8.6",
-    "react-dev-utils": "^7.0.5",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "reactstrap": "^6.5.0",
-    "webpack-dev-server": "^3.7.2"
+    "npm-check-updates": "^3.1.23",
+    "react": "^16.9.0",
+    "react-dev-utils": "^9.0.3",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
