--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@
 .env.test.local
 .env.production.local
 
+package.json
+package-lock.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.vscode
+.vscode/
