--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "gh-pages": "^2.1.1",
+    "bootstrap": "^4.5.2",
+    "gh-pages": "^2.2.0",
     "merge": "^1.2.1",
-    "npm-check-updates": "^3.1.23",
-    "react": "^16.9.0",
-    "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "reactstrap": "^8.0.1"
+    "npm-check-updates": "^3.2.2",
+    "react": "^16.13.1",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "reactstrap": "^8.5.1",
+    "yargs-parser": "^18.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -22,5 +23,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
