--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # production
 /build
+/.vscode
 
 # misc
 .DS_Store
@@ -16,11 +17,7 @@
 .env.test.local
 .env.production.local
 
-package.json
-package-lock.json
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.vscode/
