--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "homepage": "https://osamaesmail.me",
+  "homepage": "https://osamaesmail.me/",
   "name": "osaesm.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "gh-pages": "^2.2.0",
     "merge": "^1.2.1",
     "npm-check-updates": "^3.2.2",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "reactstrap": "^8.5.1",
+    "react-scripts": "^3.4.4",
+    "reactstrap": "^8.9.0",
     "yargs-parser": "^18.1.3"
   },
   "scripts": {
